...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-2dp" />

    <ImageView
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_check_24"
        android:layout_marginTop="17dp"
        android:layout_marginLeft="545dp"
        android:onClick="addFoodOnClick"/>
...
        android:textColor="@color/black"
        android:textSize="22dp"
        android:text="Calories"
        android:layout_below="@id/toolbarSection"/>

    <TextView
        android:id="@+id/numberOfCalories"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:text="182"
        android:paddingTop="@dimen/food_number_field_top_padding"
...
        android:textColor="@color/black"
        android:textSize="22dp"
        android:text="@string/Protein"
        android:layout_below="@id/macrosHeader"/>

    <TextView
        android:id="@+id/proteinGrams"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="182"
        android:paddingTop="@dimen/food_number_field_top_padding"
...
        android:textColor="@color/black"
        android:textSize="22dp"
        android:text="@string/Carbohydrates"
        android:layout_below="@id/proteinField"/>

    <TextView
        android:id="@+id/carbGrams"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="182"
        android:paddingTop="@dimen/food_number_field_top_padding"
...
        android:textColor="@color/black"
        android:textSize="22dp"
        android:text="@string/Fat"
        android:layout_below="@id/carbField"/>

    <TextView
        android:id="@+id/fatGrams"
        android:layout_width="100dp"
        android:layout_height="55dp"
        android:layout_centerVertical="true"
        android:paddingTop="@dimen/food_number_field_top_padding"
        android:gravity="center"
        android:text="182"
...
