...
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="0dp"
                    android:layout_toRightOf="@id/calorie_goal"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/calorie_food_number"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:paddingTop="25dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
...
                    android:textStyle="bold"
                    android:textSize="22dp"
                    android:text="@string/Snack"
                    android:layout_below="@id/dinnerButton" />

                <TextView
                    android:id="@+id/totalSnackCalories"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="500dp"
                    android:paddingRight="25dp"
                    android:paddingTop="2.5dp"
...
                    android:id="@+id/snackList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/snackHeader"/>

                <Button
                    android:id="@+id/snackButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add Food"
                    android:layout_below="@id/snackList"
                    android:onClick="addFoodOnClick"/>

...
