...
    <string name="Data">Data</string>
    <string name="Add">Add</string>
    <string name="ViewDailySummary">VIEW DAILY SUMMARY</string>
    <string name="ViewWeeklySummary">VIEW WEEKLY SUMMARY</string>
    <string name="Breakfast">BREAKFAST</string>
    <string name="Lunch">LUNCH</string>
    <string name="Snack">SNACK</string>
    <string name="Dinner">DINNER</string>
    <string name="pieChart">pieChart</string>
    <string name="Calories">Calories</string>
    <string name="CaloriesWeek">Calories Per Day of the Week</string>
    <string name="Date">Date</string>
    <string name="Water">WATER</string>
...
